fix: defaultPack not downloading properly